[gd_scene load_steps=86 format=3 uid="uid://bddudkfbtetv1"]

[ext_resource type="Script" uid="uid://dtmjukaqml2hg" path="res://scripts/Player.gd" id="1_xyfxo"]
[ext_resource type="Script" uid="uid://c5ejhctead2w4" path="res://scripts/PlayerMovement.gd" id="2_61f6j"]
[ext_resource type="Script" uid="uid://bb0tcdkt5uibc" path="res://scripts/PlayerAttack.gd" id="3_gsa3p"]
[ext_resource type="Texture2D" uid="uid://bk0xidxd5dmmy" path="res://assets/healthframe.png" id="3_lu8wt"]
[ext_resource type="Script" uid="uid://d3wsn4opoq0n8" path="res://scripts/PlayerHealth.gd" id="4_ursou"]
[ext_resource type="Texture2D" uid="uid://bnbvvycx07af6" path="res://assets/healthbar.png" id="4_x10p8"]
[ext_resource type="Texture2D" uid="uid://vvrt8kpshrvo" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_1.png" id="5_1x471"]
[ext_resource type="Script" uid="uid://bd4rw8f6jxyrh" path="res://scripts/health_bar.gd" id="5_gpk5f"]
[ext_resource type="Script" uid="uid://dra4pmh0njenk" path="res://scripts/dash_count.gd" id="6_ns87m"]
[ext_resource type="Texture2D" uid="uid://br473idc0blw4" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_2.png" id="6_q3p54"]
[ext_resource type="Script" uid="uid://d4jelq3g5uyw5" path="res://scripts/PlayerAnimation.gd" id="6_xyzt1"]
[ext_resource type="Script" uid="uid://b5q4bi7m22qsb" path="res://scripts/PlayerTeleport.gd" id="6_yedmq"]
[ext_resource type="Texture2D" uid="uid://dsew1n0v7hlgk" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_3.png" id="7_86134"]
[ext_resource type="Script" uid="uid://bpdqr1b68sfx7" path="res://scripts/PlayerGrappling.gd" id="7_grapple"]
[ext_resource type="Texture2D" uid="uid://himk81dluyp5" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_4.png" id="8_fd7s8"]
[ext_resource type="Texture2D" uid="uid://vrtim446w14e" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_5.png" id="9_xnlan"]
[ext_resource type="Texture2D" uid="uid://dsbj1toymcdpi" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_6.png" id="10_0ehsx"]
[ext_resource type="Texture2D" uid="uid://b8t2kccodqocl" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_7.png" id="11_ph2st"]
[ext_resource type="Texture2D" uid="uid://1yvwjoiefy8t" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_8.png" id="12_y0ehx"]
[ext_resource type="Texture2D" uid="uid://b4ripcspks5vj" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_9.png" id="13_7mmlk"]
[ext_resource type="Texture2D" uid="uid://nwbna7xbv7bf" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_10.png" id="14_5ynmj"]
[ext_resource type="Texture2D" uid="uid://8gdfnspd1g2g" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_11.png" id="15_j4ba2"]
[ext_resource type="Texture2D" uid="uid://no7qo22cevr2" path="res://assets/Warrior/Individual Sprite/Attack/Warrior_Attack_12.png" id="16_s1kf5"]
[ext_resource type="Texture2D" uid="uid://cww31t815vnie" path="res://assets/Warrior/Individual Sprite/Dash/Warrior_Dash_1.png" id="17_xiv3h"]
[ext_resource type="Texture2D" uid="uid://rpbpgkkf1swa" path="res://assets/Warrior/Individual Sprite/Dash/Warrior_Dash_2.png" id="18_hqqhk"]
[ext_resource type="Texture2D" uid="uid://e2w4kbaq4awf" path="res://assets/Warrior/Individual Sprite/Dash/Warrior_Dash_3.png" id="19_csip1"]
[ext_resource type="Texture2D" uid="uid://68ngnq0x6veb" path="res://assets/Warrior/Individual Sprite/Dash/Warrior_Dash_4.png" id="20_oh4wy"]
[ext_resource type="Texture2D" uid="uid://bhkdrqwwtq7k7" path="res://assets/Warrior/Individual Sprite/Dash/Warrior_Dash_5.png" id="21_ge44x"]
[ext_resource type="Texture2D" uid="uid://cx4hrfkdl70k3" path="res://assets/Warrior/Individual Sprite/Dash/Warrior_Dash_6.png" id="22_2rclv"]
[ext_resource type="Texture2D" uid="uid://bpjrpfn7sjibj" path="res://assets/Warrior/Individual Sprite/Dash/Warrior_Dash_7.png" id="23_yt2mk"]
[ext_resource type="Texture2D" uid="uid://c1huoju07ggng" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_1.png" id="24_wf5io"]
[ext_resource type="Texture2D" uid="uid://ds02oyfpio37p" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_2.png" id="25_rxdmf"]
[ext_resource type="Texture2D" uid="uid://cy60b6lhqvhi" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_3.png" id="26_l1neb"]
[ext_resource type="Texture2D" uid="uid://dhcmxwjn211wa" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_4.png" id="27_gtu4l"]
[ext_resource type="Texture2D" uid="uid://bfl46hkr0pc5x" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_5.png" id="28_kh8y8"]
[ext_resource type="Texture2D" uid="uid://ctwd8223he4q8" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_6.png" id="29_8m512"]
[ext_resource type="Texture2D" uid="uid://bb8qiv4p2p0ni" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_7.png" id="30_o3y0h"]
[ext_resource type="Texture2D" uid="uid://1424emwfwwxv" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_8.png" id="31_y8kuw"]
[ext_resource type="Texture2D" uid="uid://74irl8t2htst" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_9.png" id="32_lgcdd"]
[ext_resource type="Texture2D" uid="uid://0y6yx3fr7ipy" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_10.png" id="33_yedmq"]
[ext_resource type="Texture2D" uid="uid://bl177dsr1o2jg" path="res://assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_11.png" id="34_ed0e4"]
[ext_resource type="Texture2D" uid="uid://ce7vj1668a52r" path="res://assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_1.png" id="35_xq601"]
[ext_resource type="Texture2D" uid="uid://blpifvrkgbph4" path="res://assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_2.png" id="36_13p1l"]
[ext_resource type="Texture2D" uid="uid://d3sx8pbcfnr74" path="res://assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_3.png" id="37_varqr"]
[ext_resource type="Texture2D" uid="uid://bxjsviln77gyi" path="res://assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_4.png" id="38_v2ud3"]
[ext_resource type="Texture2D" uid="uid://c6ffuxblricfk" path="res://assets/Warrior/Individual Sprite/idle/Warrior_Idle_1.png" id="39_qfk0j"]
[ext_resource type="Texture2D" uid="uid://0s0k2r1dpkca" path="res://assets/Warrior/Individual Sprite/idle/Warrior_Idle_2.png" id="40_c5s6b"]
[ext_resource type="Texture2D" uid="uid://dsawoxrqqlxs4" path="res://assets/Warrior/Individual Sprite/idle/Warrior_Idle_3.png" id="41_1oq63"]
[ext_resource type="Texture2D" uid="uid://bkdisg3gptt68" path="res://assets/Warrior/Individual Sprite/idle/Warrior_Idle_4.png" id="42_d8mmc"]
[ext_resource type="Texture2D" uid="uid://duuyh55fyxha0" path="res://assets/Warrior/Individual Sprite/idle/Warrior_Idle_5.png" id="43_qn2ue"]
[ext_resource type="Texture2D" uid="uid://be2jph7pjioeu" path="res://assets/Warrior/Individual Sprite/idle/Warrior_Idle_6.png" id="44_5l7ox"]
[ext_resource type="Texture2D" uid="uid://bo5ydhwvpfp30" path="res://assets/Warrior/Individual Sprite/Slide/Warrior-Slide_1.png" id="45_3htqg"]
[ext_resource type="Texture2D" uid="uid://dpxwafqydmimv" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_1.png" id="46_5ynmj"]
[ext_resource type="Texture2D" uid="uid://bxm3vj7kxn7al" path="res://assets/Warrior/Individual Sprite/Slide/Warrior-Slide_2.png" id="46_m4se0"]
[ext_resource type="Texture2D" uid="uid://dyk3i2wwo2v3k" path="res://assets/Warrior/Individual Sprite/Slide/Warrior-Slide_3.png" id="47_8fsrt"]
[ext_resource type="Texture2D" uid="uid://oqjbr2qcv8ai" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_2.png" id="47_j4ba2"]
[ext_resource type="Texture2D" uid="uid://paf3j0vxu73g" path="res://assets/Warrior/Individual Sprite/Slide/Warrior-Slide_4.png" id="48_8g6bl"]
[ext_resource type="Texture2D" uid="uid://dpm08c7e536nx" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_3.png" id="48_s1kf5"]
[ext_resource type="Texture2D" uid="uid://clk88lpwrmtjl" path="res://assets/Warrior/Individual Sprite/Slide/Warrior-Slide_5.png" id="49_4jyt3"]
[ext_resource type="Texture2D" uid="uid://df74e6gwofbpy" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_4.png" id="49_xiv3h"]
[ext_resource type="Texture2D" uid="uid://dhtahhi4a58dv" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_5.png" id="50_hqqhk"]
[ext_resource type="Texture2D" uid="uid://d00ygn618yo3f" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_6.png" id="51_csip1"]
[ext_resource type="Texture2D" uid="uid://cr5cdrfqye5ss" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_7.png" id="52_oh4wy"]
[ext_resource type="Texture2D" uid="uid://drixu5aspi02m" path="res://assets/Warrior/Individual Sprite/Run/Warrior_Run_8.png" id="53_ge44x"]
[ext_resource type="Texture2D" uid="uid://d1sfbwr2x52u7" path="res://assets/warrior_tp_end/warrior_tp_end1.png" id="59_lgcdd"]
[ext_resource type="Texture2D" uid="uid://v7mehee76jn4" path="res://assets/warrior_tp_end/warrior_tp_end2.png" id="60_yedmq"]
[ext_resource type="Texture2D" uid="uid://23275b6cjqob" path="res://assets/warrior_tp_end/warrior_tp_end3.png" id="61_ed0e4"]
[ext_resource type="Texture2D" uid="uid://b8iavqo4ul462" path="res://assets/warrior_tp_end/warrior_tp_end4.png" id="62_xq601"]
[ext_resource type="Texture2D" uid="uid://d052n1fivkuf2" path="res://assets/warrior_tp_end/warrior_tp_end5.png" id="63_13p1l"]
[ext_resource type="Texture2D" uid="uid://cf6tc7ab1dqen" path="res://assets/warrior_tp_end/warrior_tp_end6.png" id="64_varqr"]
[ext_resource type="Texture2D" uid="uid://vxm4fj08k38l" path="res://assets/warrior_tp_end/warrior_tp_end7.png" id="65_v2ud3"]
[ext_resource type="Texture2D" uid="uid://b4gr0dhvo10hn" path="res://assets/warrior_tp_end/warrior_tp_end8.png" id="66_qfk0j"]
[ext_resource type="Texture2D" uid="uid://csof8ctl7xo58" path="res://assets/warrior_tp_end/warrior_tp_end9.png" id="67_c5s6b"]
[ext_resource type="Texture2D" uid="uid://b45l60a88esta" path="res://assets/warrior_tp_start/warrior_tp_start1.png" id="68_1oq63"]
[ext_resource type="Texture2D" uid="uid://dth538xij2ehg" path="res://assets/warrior_tp_start/warrior_tp_start2.png" id="69_d8mmc"]
[ext_resource type="Texture2D" uid="uid://brbyjn1b8t1cv" path="res://assets/warrior_tp_start/warrior_tp_start3.png" id="70_qn2ue"]
[ext_resource type="Texture2D" uid="uid://bfn4ng6xooc13" path="res://assets/warrior_tp_start/warrior_tp_start4.png" id="71_5l7ox"]
[ext_resource type="Texture2D" uid="uid://dc6kiqm7ddy6" path="res://assets/warrior_tp_start/warrior_tp_start5.png" id="72_3htqg"]
[ext_resource type="Texture2D" uid="uid://cmatmuppgo5pi" path="res://assets/warrior_tp_start/warrior_tp_start6.png" id="73_m4se0"]
[ext_resource type="Texture2D" uid="uid://boq53rbmphhid" path="res://assets/warrior_tp_start/warrior_tp_start7.png" id="74_8fsrt"]
[ext_resource type="Texture2D" uid="uid://b5oqi854dicof" path="res://assets/warrior_tp_start/warrior_tp_start8.png" id="75_8g6bl"]
[ext_resource type="Texture2D" uid="uid://dan0kwh03f142" path="res://assets/warrior_tp_start/warrior_tp_start9.png" id="76_4jyt3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_srfhh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1x471")
}, {
"duration": 1.0,
"texture": ExtResource("6_q3p54")
}, {
"duration": 1.0,
"texture": ExtResource("7_86134")
}, {
"duration": 1.0,
"texture": ExtResource("8_fd7s8")
}, {
"duration": 1.0,
"texture": ExtResource("9_xnlan")
}, {
"duration": 1.0,
"texture": ExtResource("10_0ehsx")
}, {
"duration": 1.0,
"texture": ExtResource("11_ph2st")
}, {
"duration": 1.0,
"texture": ExtResource("12_y0ehx")
}, {
"duration": 1.0,
"texture": ExtResource("13_7mmlk")
}, {
"duration": 1.0,
"texture": ExtResource("14_5ynmj")
}, {
"duration": 1.0,
"texture": ExtResource("15_j4ba2")
}, {
"duration": 1.0,
"texture": ExtResource("16_s1kf5")
}],
"loop": false,
"name": &"Attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_xiv3h")
}, {
"duration": 1.0,
"texture": ExtResource("18_hqqhk")
}, {
"duration": 1.0,
"texture": ExtResource("19_csip1")
}, {
"duration": 1.0,
"texture": ExtResource("20_oh4wy")
}, {
"duration": 1.0,
"texture": ExtResource("21_ge44x")
}, {
"duration": 1.0,
"texture": ExtResource("22_2rclv")
}, {
"duration": 1.0,
"texture": ExtResource("23_yt2mk")
}],
"loop": false,
"name": &"Dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_wf5io")
}, {
"duration": 1.0,
"texture": ExtResource("25_rxdmf")
}, {
"duration": 1.0,
"texture": ExtResource("26_l1neb")
}, {
"duration": 1.0,
"texture": ExtResource("27_gtu4l")
}, {
"duration": 1.0,
"texture": ExtResource("28_kh8y8")
}, {
"duration": 1.0,
"texture": ExtResource("29_8m512")
}, {
"duration": 1.0,
"texture": ExtResource("30_o3y0h")
}, {
"duration": 1.0,
"texture": ExtResource("31_y8kuw")
}, {
"duration": 1.0,
"texture": ExtResource("32_lgcdd")
}, {
"duration": 1.0,
"texture": ExtResource("33_yedmq")
}, {
"duration": 1.0,
"texture": ExtResource("34_ed0e4")
}],
"loop": false,
"name": &"Death",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_xq601")
}, {
"duration": 1.0,
"texture": ExtResource("36_13p1l")
}, {
"duration": 1.0,
"texture": ExtResource("37_varqr")
}, {
"duration": 1.0,
"texture": ExtResource("38_v2ud3")
}],
"loop": false,
"name": &"Hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_qfk0j")
}, {
"duration": 1.0,
"texture": ExtResource("40_c5s6b")
}, {
"duration": 1.0,
"texture": ExtResource("41_1oq63")
}, {
"duration": 1.0,
"texture": ExtResource("42_d8mmc")
}, {
"duration": 1.0,
"texture": ExtResource("43_qn2ue")
}, {
"duration": 1.0,
"texture": ExtResource("44_5l7ox")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("46_5ynmj")
}, {
"duration": 1.0,
"texture": ExtResource("47_j4ba2")
}, {
"duration": 1.0,
"texture": ExtResource("48_s1kf5")
}, {
"duration": 1.0,
"texture": ExtResource("49_xiv3h")
}, {
"duration": 1.0,
"texture": ExtResource("50_hqqhk")
}, {
"duration": 1.0,
"texture": ExtResource("51_csip1")
}, {
"duration": 1.0,
"texture": ExtResource("52_oh4wy")
}, {
"duration": 1.0,
"texture": ExtResource("53_ge44x")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("45_3htqg")
}, {
"duration": 1.0,
"texture": ExtResource("46_m4se0")
}, {
"duration": 1.0,
"texture": ExtResource("47_8fsrt")
}, {
"duration": 1.0,
"texture": ExtResource("48_8g6bl")
}, {
"duration": 1.0,
"texture": ExtResource("49_4jyt3")
}],
"loop": false,
"name": &"Slide",
"speed": 6.0
}, {
"frames": [{
"duration": 0.1,
"texture": ExtResource("59_lgcdd")
}, {
"duration": 1.0,
"texture": ExtResource("60_yedmq")
}, {
"duration": 1.0,
"texture": ExtResource("61_ed0e4")
}, {
"duration": 1.0,
"texture": ExtResource("62_xq601")
}, {
"duration": 1.0,
"texture": ExtResource("63_13p1l")
}, {
"duration": 1.0,
"texture": ExtResource("64_varqr")
}, {
"duration": 1.0,
"texture": ExtResource("65_v2ud3")
}, {
"duration": 1.0,
"texture": ExtResource("66_qfk0j")
}, {
"duration": 1.0,
"texture": ExtResource("67_c5s6b")
}],
"loop": false,
"name": &"Teleport End",
"speed": 30.0
}, {
"frames": [{
"duration": 0.1,
"texture": ExtResource("68_1oq63")
}, {
"duration": 1.0,
"texture": ExtResource("69_d8mmc")
}, {
"duration": 1.0,
"texture": ExtResource("70_qn2ue")
}, {
"duration": 1.0,
"texture": ExtResource("71_5l7ox")
}, {
"duration": 1.0,
"texture": ExtResource("72_3htqg")
}, {
"duration": 1.0,
"texture": ExtResource("73_m4se0")
}, {
"duration": 1.0,
"texture": ExtResource("74_8fsrt")
}, {
"duration": 1.0,
"texture": ExtResource("75_8g6bl")
}, {
"duration": 1.0,
"texture": ExtResource("76_4jyt3")
}],
"loop": false,
"name": &"Teleport Start",
"speed": 30.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8nwgm"]
radius = 28.5714
height = 79.1209

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5ynmj"]
radius = 9.00001
height = 39.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.455, 0.455)
input_pickable = true
motion_mode = 1
script = ExtResource("1_xyfxo")

[node name="PlayerMovement" type="Node2D" parent="."]
script = ExtResource("2_61f6j")

[node name="PlayerAttack" type="Node2D" parent="."]
script = ExtResource("3_gsa3p")

[node name="PlayerHealth" type="Node2D" parent="."]
script = ExtResource("4_ursou")

[node name="PlayerAnimation" type="Node2D" parent="."]
script = ExtResource("6_xyzt1")

[node name="PlayerTeleport" type="Node2D" parent="."]
script = ExtResource("6_yedmq")

[node name="PlayerGrappling" type="Node2D" parent="."]
script = ExtResource("7_grapple")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 5
position = Vector2(-2.27374e-13, 5.68434e-14)
scale = Vector2(4.20391, 4.20391)
sprite_frames = SubResource("SpriteFrames_srfhh")
animation = &"Teleport End"
autoplay = "Idle"
frame = 8
frame_progress = 1.0
offset = Vector2(6.19888e-06, -1.5684)

[node name="PlayerCollision" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(0, 24.1758)
shape = SubResource("CapsuleShape2D_8nwgm")

[node name="Projectiles" type="Node2D" parent="." groups=["Effect"]]

[node name="DashCount" type="Label" parent="." groups=["UI"]]
texture_filter = 5
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -201.0
offset_right = -24.9999
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 3.58
uppercase = true
script = ExtResource("6_ns87m")

[node name="HealthBar" type="TextureProgressBar" parent="." groups=["UI"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 80.0
offset_right = 102.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
rounded = true
texture_under = ExtResource("3_lu8wt")
texture_progress = ExtResource("4_x10p8")
script = ExtResource("5_gpk5f")

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DodgeRecovery" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DodgeCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
scale = Vector2(2.1978, 2.1978)
collision_layer = 4
collision_mask = 2

[node name="AttackHurtbox" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(46, -6.00001)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_5ynmj")

[node name="attackcd" type="Timer" parent="."]
wait_time = 0.206
one_shot = true
